# msvc8.0_patcher

./: .gitmodules  CMakeLists.txt  README.md
cmake/: add_patched.cmake
dependencies/: CMakeLists.txt
src/: c1_patched.c  c1xx_patched.c  c2_patched.c  cl_patched.c  constants.h  main.cpp  prologue.h.in  structs.h  version.h.in  yylex.h
